add acommodation-detail e adequacoes dos outros arquivos

--- a/accommodation.html
+++ b/accommodation.html
@@ -9,16 +9,7 @@
   <script src="http://code.jquery.com/jquery-3.2.1.min.js"></script>
   <!-- Bootstrap 3.3.7 -->
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-
-  <style>
-    .list-group-item img: {
-      height: 200px;
-      display: block;
-      margin-left: auto;
-      margin-right: auto;
-    }
-  </style>
-
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
   <meta charset="utf-8">
 </head>
 
@@ -28,46 +19,64 @@
     <ul class="list-group">
       <li class="list-group-item" class="col-md-12 col-sm-12">
         <div>
-          <img style="height:200px" src="https://images.pexels.com/photos/316776/pexels-photo-316776.jpeg?auto=compress&cs=tinysrgb&h=650&w=940">
+          <img style="width:50%" src="https://images.pexels.com/photos/316776/pexels-photo-316776.jpeg?auto=compress&cs=tinysrgb&h=650&w=940">
         </div>
         <div>
           <div>
-            <label for="name">Nome do Local:</label>
+            <label for="nameplace">Nome do Local:</label>
             <span name="nameplace">nome da minha localidade</span>
           </div>
           <div>
-            <label for="name">Descrição:</label>
+            <label for="description">Descrição:</label>
             <span name="description">esta é minha desclicao da bagaça</span>
           </div>
           <div>
-            <label for="name">Endereço:</label>
+            <label for="address">Endereço:</label>
             <span name="address">rua tal, bairro desconhecido, UF, Guiana</span>
           </div>
         </div>
         <div>
+          <label for="rate">Avaliação:</label>
+          <i class="fas fa-star" style="color:#F1BA21"></i>
+          <i class="fas fa-star" style="color:#F1BA21"></i>
+          <i class="fas fa-star" style="color:#F1BA21"></i>
+          <i class="fas fa-star" style="color:#F1BA21"></i>
+          <i class="fas fa-star"></i>
+        </div>
+        <div>
+          <input id="btn-reservar" type="submit" class="btn btn-danger" value="Cancelar">
           <input id="btn-visualizar" type="submit" class="btn btn-success" value="Visualizar">
         </div>
       </li>
 
       <li class="list-group-item" class="col-md-12 col-sm-12">
         <div>
-          <img style="height:200px" src="https://images.pexels.com/photos/206673/pexels-photo-206673.jpeg?auto=compress&cs=tinysrgb&h=650&w=940">
+          <img style="width:50%" src="https://images.pexels.com/photos/206673/pexels-photo-206673.jpeg?auto=compress&cs=tinysrgb&h=650&w=940">
         </div>
         <div>
           <div>
-            <label for="name">Nome do Local:</label>
+            <label for="nameplace">Nome do Local:</label>
             <span name="nameplace">nome da minha localidade</span>
           </div>
           <div>
-            <label for="name">Descrição:</label>
+            <label for="description">Descrição:</label>
             <span name="description">esta é minha desclicao da bagaça</span>
           </div>
           <div>
-            <label for="name">Endereço:</label>
+            <label for="address">Endereço:</label>
             <span name="address">rua tal, bairro desconhecido, UF, Guiana</span>
           </div>
         </div>
         <div>
+          <label for="rate">Avaliação:</label>
+          <i class="fas fa-star" style="color:#F1BA21"></i>
+          <i class="fas fa-star" style="color:#F1BA21"></i>
+          <i class="fas fa-star" style="color:#F1BA21"></i>
+          <i class="fas fa-star"></i>
+          <i class="fas fa-star"></i>
+        </div>
+        <div>
+          <input id="btn-reservar" type="submit" class="btn btn-danger" value="Cancelar">
           <input id="btn-visualizar" type="submit" class="btn btn-success" value="Visualizar">
         </div>
       </li>
