--- a/perfil-edit.html
+++ b/perfil-edit.html
@@ -53,7 +53,7 @@
 
     <div class="col-md-12">
       <div class="form-group">
-        <label for="password_confirmation">CPF/CNPJ</label>
+        <label for="cpf">CPF/CNPJ</label>
         <input type="number" class="form-control" name="cpf" placeholder="000.000.000-00">
       </div>
       <!-- /.form-group -->
@@ -62,7 +62,7 @@
 
     <div class="col-md-12">
       <div class="form-group">
-        <label for="password_confirmation">País</label>
+        <label for="country">País</label>
         <input type="text" class="form-control" name="country" placeholder="Brasil">
       </div>
       <!-- /.form-group -->
@@ -71,7 +71,7 @@
 
     <div class="col-md-12">
       <div class="form-group">
-        <label for="password_confirmation">UF</label>
+        <label for="state">UF</label>
         <input type="text" class="form-control" name="state" placeholder="UF">
       </div>
       <!-- /.form-group -->
@@ -80,7 +80,7 @@
 
     <div class="col-md-12">
       <div class="form-group">
-        <label for="sexo">Sexo</label>
+        <label for="gender">Sexo</label>
         <select class="form-control" name="gender">
           <option value="" selected>--Sexo--</option>
           <option value="m">Masculino</option>
