--- a/perfil.html
+++ b/perfil.html
@@ -17,7 +17,7 @@
   <div class="col-md-7">
     <div class="col-md-12">
       <div class="form-group">
-        <label for="name">Name *</label>
+        <label for="name">Nome *</label>
         <input type="text" class="form-control" name="name" placeholder="Name" disabled>
       </div>
       <!-- /.form-group -->
