--- a/register.html
+++ b/register.html
@@ -17,18 +17,17 @@
     <div class="col-md-7">
         <div class="col-md-12">
           <div class="form-group">
-            <label for="imagem">Imagem *</label>
-            <input type="file" name="imagem" >
+            <label for="image">Imagem *</label>
+            <input type="file" name="image" required>
           </div>
           <!-- /.form-group -->
         </div>
         <!-- /.col-md-12 -->
 
- 
     <div class="col-md-12">
       <div class="form-group">
         <label for="nameEstabelecimento">Name Estabelecimento*</label>
-        <input type="text" class="form-control" name="name" placeholder="Name">
+        <input type="text" class="form-control" name="name" placeholder="Nome" required>
       </div>
       <!-- /.form-group -->
     </div>
@@ -37,7 +36,7 @@
     <div class="col-md-12">
       <div class="form-group ">
         <label for="descricao">Descrição *</label>
-        <input type="text" class="form-control" name="descricao" placeholder="Descrição">
+        <input type="text" class="form-control" name="description" placeholder="Descrição" required>
       </div>
       <!-- /.form-group -->
     </div>
@@ -46,7 +45,7 @@
     <div class="col-md-12">
       <div class="form-group">
         <label for="endereco">Endereço *</label>
-        <input type="text" class="form-control" name="endereco" placeholder="Endereço">
+        <input type="text" class="form-control" name="address" placeholder="Endereço" required>
       </div>
       <!-- /.form-group -->
     </div>
@@ -59,7 +58,7 @@
         <input type="submit" class="btn btn-primary" name="btn-gravar" value="Gravar">
       </div>
 
-    
+
 
   </div>
 
